--- a/weatherprocess/Dockerfile
+++ b/weatherprocess/Dockerfile
@@ -2,6 +2,7 @@ FROM golang:1.23-alpine AS builder
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
+RUN go mod tidy
 COPY . .
 RUN go build -o weather-notify .
 
