Consumer sends the forcast to the recipient email

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
 
   consumer:
     image: weatherconsumer:latest
+    env_file:
+      - .env
     platform: linux/amd64
     depends_on:
       - kafka1
