--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 FROM_EMAIL_ID="from_email_id"
-FROM_EMAIL_APP_PASS="from_email_id_passwd"
+FROM_EMAIL_APP_PASS="from_email_id_app_password"
 TO_EMAIL_ID="recipient_email_id"
+EMAIL_NOTITICATION_IN_MINUTES="720"
