--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
 
   producer:
     image: weatherproducer:latest
+    env_file:
+      - .env
     platform: linux/amd64
     depends_on:
       - kafka1
