Fixed a typo bug + optimization

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FROM_EMAIL_ID="from_email_id"
-FROM_EMAIL_APP_PASS="from_email_id_app_password"
-TO_EMAIL_ID="recipient_email_id"
-EMAIL_NOTITICATION_IN_MINUTES="720"
+FROM_EMAIL_ID="weathernotifytest@gmail.com"
+FROM_EMAIL_APP_PASS="XXXXXXXXXXXXXX"
+TO_EMAIL_ID="mvjp.183@gmail.com"
+EMAIL_NOTIFICATION_IN_MINUTES="1"
